latest changes from Jocelyne for DPD, CTA and NOC

--- a/APIDocumentation/cta-documentation-en.html
+++ b/APIDocumentation/cta-documentation-en.html
@@ -17,8 +17,8 @@
     <meta name="dcterms.contributor" content="" />
     <meta name="dcterms.type" title="gctype" content="" />
     <meta name="dcterms.audience" title="gcaudience" content="public" />
-    <meta name="dcterms.issued" title="W3CDTF" content="2017-11-30" />
-    <meta name="dcterms.modified" title="W3CDTF" content="2017-11-30" />
+    <meta name="dcterms.issued" title="W3CDTF" content="2017-12-15" />
+    <meta name="dcterms.modified" title="W3CDTF" content="2017-12-15" />
     <meta name="review_date" content="" />
     <meta name="meta_date" content="" />
 
@@ -152,7 +152,7 @@
                         <p>The Clinical Trials Database provides to the public a listing of specific information relating to phase I, II and III clinical trials in patients. The database is managed by Health Canada and provides a source of information about Canadian clinical trials involving human pharmaceutical and biological drugs.</p>
                         <p>This Application Programming Interface (API) allows developers to access that information in JSON and XML format for reuse in their own applications.
                         The base URI for the Notice of Compliance Database is&nbsp;<a href="https://health-products.canada.ca/api/clinical-trial/">https://health-products.canada.ca/api/clinical-trial/</a> and you can add parameters to it. Any requests are made relative to this URI.
-                        <p>Information is also available in CSV format, use that URI&nbsp;<a href="https://lam-dev.hres.ca/api-documentation/APIDocumentation/cta-dataset-en.html">https://lam-dev.hres.ca/api-documentation/APIDocumentation/cta-dataset-en</a> to see the available options.</p>
+                        <p>Information is also available in CSV format, use that URI&nbsp;<a href="https://health-products.canada.ca/api/documentation/cta-dataset-en.html">https://health-products.canada.ca/api/documentation/cta-dataset-en</a> to see the available options.</p>
                     </section>                    
                     <!--Sponsor-section-start-->
                     <section>
