--- a/APIDocumentation/noc-documentation-en.html
+++ b/APIDocumentation/noc-documentation-en.html
@@ -17,8 +17,8 @@
     <meta name="dcterms.contributor" content="" />
     <meta name="dcterms.type" title="gctype" content="" />
     <meta name="dcterms.audience" title="gcaudience" content="public" />
-    <meta name="dcterms.issued" title="W3CDTF" content="2017-11-30" />
-    <meta name="dcterms.modified" title="W3CDTF" content="2017-11-30" />
+    <meta name="dcterms.issued" title="W3CDTF" content="2017-12-15" />
+    <meta name="dcterms.modified" title="W3CDTF" content="2017-12-15" />
     <meta name="review_date" content="" />
     <meta name="meta_date" content="" />
 
@@ -165,7 +165,7 @@
                         Through a phased in approach Health Canada will populate the remaining NOCs for Veterinary drugs from January 1, 1994 to September 18, 2000.</p>
                         <p>This Application Programming Interface (API) allows developers to access that information in JSON and XML format for reuse in their own applications.
                         The base URI for the Notice of Compliance Database is&nbsp;<a href="https://health-products.canada.ca/api/notice-of-compliance/">https://health-products.canada.ca/api/notice-of-compliance/</a> and you can add parameters to it. Any requests are made relative to this URI.</p>
-                        <p>Information is also available in CSV format, use that URI&nbsp;<a href="https://lam-dev.hres.ca/api-documentation/APIDocumentation/noc-dataset-en.html">https://lam-dev.hres.ca/api-documentation/APIDocumentation/noc-dataset-en</a> to see the available options.</p>
+                        <p>Information is also available in CSV format, use that URI&nbsp;<a href="https://health-products.canada.ca/api/documentation/noc-dataset-en.html">https://health-products.canada.ca/api/documentation/noc-dataset-en</a> to see the available options.</p>
                     </section>
                     <!--Drug Product-section-start-->  
                     <section>                        
