--- a/APIDocumentation/mdall-documentation-fr.html
+++ b/APIDocumentation/mdall-documentation-fr.html
@@ -17,8 +17,8 @@
     <meta name="dcterms.contributor" content="" />
     <meta name="dcterms.type" title="gctype" content="" />
     <meta name="dcterms.audience" title="gcaudience" content="" />
-    <meta name="dcterms.issued" title="W3CDTF" content="2017-12-15" />
-    <meta name="dcterms.modified" title="W3CDTF" content="2017-12-15" />
+    <meta name="dcterms.issued" title="W3CDTF" content="2018-01-26" />
+    <meta name="dcterms.modified" title="W3CDTF" content="2018-01-26" />
     <meta name="review_date" content="" />
     <meta name="meta_date" content="" />
 
@@ -705,7 +705,7 @@
                         <!--h3-section-start-->
                         <section>
                             <h3 id="a5.1">Paramètres</h3>
-                            <p>Il y a cinq paramètres dans la requête: id, device identifier, state, lang et type.</p>
+                            <p>Il y a cinq paramètres dans la requête: id, device_identifier, state, lang et type.</p>
                             <table>
                                 <caption>
                                     Paramètres pour la requête
