MDALL documentation pages updated by Jocelyne

--- a/APIDocumentation/mdall-documentation-en.html
+++ b/APIDocumentation/mdall-documentation-en.html
@@ -167,7 +167,7 @@
                         <!--h3-section-start-->
                         <section>
                             <h3 id="a2.1">Parameters</h3>
-                            <p>There are seven parameters in the request: id, state, licence_name, licence_number, company_id, lang and type.</p>
+                            <p>There are six parameters in the request: id, state, licence_name, company_id, lang and type.</p>
                             <table>
                                 <caption>
                                     Request parameters
