--- a/APIDocumentation/mdall-documentation-fr.html
+++ b/APIDocumentation/mdall-documentation-fr.html
@@ -161,7 +161,7 @@
                         <!--h3-section-start-->
                         <section>
                             <h3 id="a2.1">Paramètres</h3>
-                            <p>Il y a sept paramètres dans la requête: id, state, licence_name, licence_number, company_id, lang et type.</p>
+                            <p>Il y a six paramètres dans la requête: id, state, licence_name, company_id, lang et type.</p>
                             <table>
                                 <caption>
                                     Paramètres pour la requête
